1. added new external call for post 2. updated the mocks 3. fix the external patient service test
